	are taller than they are wide.

	3. Ignores the file source ("File Generation Type") field in the
	2019 version of the file, which would otherwise be incorrectly used
	as an output multiplier.

    It also offers the following enhancements:

	1. Shape information is included in the .rad file comments.

	2. 1995, 2002, and 2019-version luminous opening geometry is
	accounted for.

	3. The 2002 and 2019 IES file versions are recognized and
	processed appropriately.

	4. I have made an attempt to do something intelligent with less
	common "luminous opening" shapes in the 1995, 2002, and 2019 versions
	of the standard, though I have not implemented any support for new
	geometry; approximations are substituted and warning messages issued.
	Unfortunately, this code is not tested, since I don't have any IES
	files that use these shapes.

Added support for depth-of-field blurring in vwrays using -pd option.
Also, made -c count work with vwrays -i, producing multiple samples
per indicated pixel position.  At the same time, support for the -pd
option was added to rtpict, which calls on vwrays for its samples.

Fixed issue with BSDFs that didn't obey reciprocity, where direct
sampling wasn't following exactly with indirect sampling.  This was
discovered and reported by Jon Sargent.

Created checkBSDF tool to test XML BSDF reciprocity and perform similar
sanity checks.

Added -O option to pvalue and pextrem to report watts/sr/m^2 even if
picture is XYZE.

Made subtle changes to header i/o routines to preserve alignment in
binary file formats to enable memory-mapping.  Implemented memory-mapped
matrix loading in rmtxop for binary double files.

Removed ambient value sorting, which was written when ambient caches
could overwhelm available memory.  This is rarely the case these days,
and the added code complexity and updating of cache values with LRU
counts dirties pages that would otherwise remain clean, so it was
often a loss even when VM was an issue.